[gd_scene load_steps=3 format=3 uid="uid://dnp68bg7x5xqw"]

[ext_resource type="Script" uid="uid://oyac8t0um84k" path="res://Scenes/Mechanics/Exit/WalkingExit/WalkingExit.gd" id="1_oy13n"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oy13n"]
size = Vector2(100, 200)

[node name="WalkingExit" type="Node2D"]
script = ExtResource("1_oy13n")

[node name="WarpZone" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0

[node name="Collision" type="CollisionShape2D" parent="WarpZone"]
unique_name_in_owner = true
position = Vector2(0, -100)
shape = SubResource("RectangleShape2D_oy13n")

[node name="Marker3D" type="Marker2D" parent="."]
gizmo_extents = 50.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="FadeOut" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="WarpZone" to="." method="_on_warp_zone_body_entered"]
